test/visibility/import/relative/import-relative-error8.chpl
module M {
  import super.impossible;
}
